# bkn-trace/agent-observability/docs/swagger/swagger.json
@@ -3340,7 +3340,7 @@
                 "operation_business_edges": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/sessionvo.OperationBusinessEdge"
+                        "$ref": "#/definitions/httphandler.operationBusinessEdgeRequest"
                     }
                 },
                 "operation_id": {
@@ -3592,6 +3592,29 @@
                 },
                 "reason": {
                     "type": "string"
+                }
+            }
+        },
+        "httphandler.operationBusinessEdgeRequest": {
+            "type": "object",
+            "required": [
+                "business_ref",
+                "observed_at",
+                "operation_id",
+                "role"
+            ],
+            "properties": {
+                "business_ref": {
+                    "$ref": "#/definitions/httphandler.businessRefRequest"
+                },
+                "observed_at": {
+                    "type": "string"
+                },
+                "operation_id": {
+                    "type": "string"
+                },
+                "role": {
+                    "$ref": "#/definitions/sessionvo.OperationBusinessRole"
                 }
             }
         },
@@ -4535,29 +4558,6 @@
                 },
                 "updated_at": {
                     "type": "string"
-                }
-            }
-        },
-        "sessionvo.OperationBusinessEdge": {
-            "type": "object",
-            "required": [
-                "business_ref",
-                "observed_at",
-                "operation_id",
-                "role"
-            ],
-            "properties": {
-                "business_ref": {
-                    "$ref": "#/definitions/sessionvo.BusinessRef"
-                },
-                "observed_at": {
-                    "type": "string"
-                },
-                "operation_id": {
-                    "type": "string"
-                },
-                "role": {
-                    "$ref": "#/definitions/sessionvo.OperationBusinessRole"
                 }
             }
         },
